tests/spec/emit/snapshots/wrap_err_message_escapes_percent_and_interpolates_values.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:strconv"
  
  fn parse(raw: string, attempt: int) -> Result<int, error> {
    let n = strconv.Atoi(raw).wrap_err(f"attempt {attempt} at 100% of {raw}")?
    Ok(n)
  }
  
  fn main() {
    fmt.Println(parse("1", 2))
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func parse(raw string, attempt int) (int, error) {
	n, err := strconv.Atoi(raw)
	if err != nil {
		return 0, fmt.Errorf("attempt %d at 100%% of %s: %w", attempt, raw, err)
	}
	return n, nil
}

func main() {
	fmt.Println(lisette.ResultFromPair[int](parse("1", 2)))
}
