tests/spec/emit/snapshots/wrap_err_message_with_a_nested_propagate_keeps_the_outer_error.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:strconv"
  
  fn three() -> Result<int, error> {
    let n = strconv.Atoi("x").wrap_err(f"{strconv.Atoi("0")?}")?
    Ok(n)
  }
---
package main

import (
	"fmt"
	"strconv"
)

func three() (int, error) {
	n, err_1 := strconv.Atoi("x")
	ret, err := strconv.Atoi("0")
	if err != nil {
		return 0, err
	}
	if err_1 != nil {
		return 0, fmt.Errorf("%d: %w", ret, err_1)
	}
	return n, nil
}
