tests/spec/emit/snapshots/wrap_err_messages_run_where_nothing_reads_the_wrapped_error.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:strconv"
  
  fn message() -> string {
    fmt.Println("message ran")
    "ctx"
  }
  
  fn predicate() -> bool {
    strconv.Atoi("1").wrap_err(message()).is_err()
  }
  
  fn defaulted() -> int {
    strconv.Atoi("1").wrap_err(message()).unwrap_or(0)
  }
  
  fn let_else() -> int {
    let Ok(v) = strconv.Atoi("1").wrap_err(message()) else { return -1 }
    v
  }
---
package main

import (
	"fmt"
	"strconv"
)

func message() string {
	fmt.Println("message ran")
	return "ctx"
}

func predicate() bool {
	_, err := strconv.Atoi("1")
	message()
	return err != nil
}

func defaulted() int {
	ret, err := strconv.Atoi("1")
	message()
	if err != nil {
		ret = 0
	}
	return ret
}

func letElse() int {
	v, err := strconv.Atoi("1")
	message()
	if err != nil {
		return -1
	}
	return v
}
