tests/spec/emit/snapshots/wrap_err_on_pointer_returning_go_call_wraps_both_failures.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:os"
  
  fn open(path: string) -> Result<Ref<os.File>, error> {
    let file = os.Open(path).wrap_err("open")?
    Ok(file)
  }
  
  fn main() {
    fmt.Println(open("missing.txt"))
  }
---
package main

import (
	"errors"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"os"
)

func open(path string) (*os.File, error) {
	file, err := os.Open(path)
	if err != nil {
		return nil, fmt.Errorf("open: %w", err)
	}
	if file == nil {
		return nil, fmt.Errorf("open: %w", errors.New("unexpected nil"))
	}
	return file, nil
}

func main() {
	ret, ret_1 := open("missing.txt")
	var result lisette.Result[*os.File, error]
	if ret_1 != nil {
		result = lisette.MakeResultErr[*os.File, error](ret_1)
	} else if ret == nil {
		result = lisette.MakeResultErr[*os.File, error](errors.New("unexpected nil"))
	} else {
		result = lisette.MakeResultOk[*os.File, error](ret)
	}
	fmt.Println(result)
}
