tests/spec/emit/snapshots/wrap_err_propagate_on_go_calls_uses_errorf.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:encoding/json"
  import "go:fmt"
  import "go:os"
  
  const FILE = "nums.json"
  
  fn load() -> Result<Slice<int>, error> {
    let bytes = os.ReadFile(FILE).wrap_err(f"reading {FILE}")?
    let mut nums: Slice<int> = []
    json.Unmarshal(bytes, &nums).wrap_err("parsing nums")?
    Ok(nums)
  }
  
  fn main() {
    fmt.Println(load())
  }
---
package main

import (
	"encoding/json"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"os"
)

const File = "nums.json"

func load() ([]int, error) {
	bytes, err := os.ReadFile(File)
	if err != nil {
		return nil, fmt.Errorf("reading %s: %w", File, err)
	}
	nums := []int{}
	if err := json.Unmarshal(bytes, &nums); err != nil {
		return nil, fmt.Errorf("parsing nums: %w", err)
	}
	return nums, nil
}

func main() {
	fmt.Println(lisette.ResultFromPair[[]int](load()))
}
