tests/spec/emit/snapshots/wrap_err_propagation.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn load(r: Result<int, error>) -> Result<int, error> {
    let n = r.wrap_err("loading config")?
    Ok(n)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func load(r lisette.Result[int, error]) (int, error) {
	check := lisette.ResultWrapErr(r, "loading config")
	if check.Tag != lisette.ResultOk {
		return 0, check.ErrVal
	}
	n := check.OkVal
	return n, nil
}
