tests/spec/emit/snapshots/wrap_err_runtime_wraps_message.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:errors"
  
  fn test() {
    let r: Result<int, error> = Err(errors.New("boom"))
    match r.wrap_err("loading config") {
      Ok(_) => panic("expected error"),
      Err(e) => {
        if e.Error() != "loading config: boom" {
          panic("wrong wrapped message")
        }
      },
    }
  }
---
package main

import (
	"errors"
	lisette "github.com/ivov/lisette/prelude"
)

func test() {
	r := lisette.MakeResultErr[int, error](errors.New("boom"))
	subject := lisette.ResultWrapErr(r, "loading config")
	if subject.Tag == lisette.ResultOk {
		panic("expected error")
	}
	if subject.ErrVal.Error() != "loading config: boom" {
		panic("wrong wrapped message")
	}
}
