tests/spec/emit/snapshots/wrapped_error_variable_is_read_before_a_message_that_rebinds_it.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:errors"
  
  fn two() -> Result<int, error> {
    let mut e = errors.New("before")
    let update = || -> string {
      e = errors.New("after")
      "context"
    }
    Err(e).wrap_err(update())
  }
---
package main

import (
	"errors"
	"fmt"
)

func two() (int, error) {
	e := errors.New("before")
	update := func() string {
		e = errors.New("after")
		return "context"
	}
	err := e
	msg := update()
	return 0, fmt.Errorf("%s: %w", msg, err)
}
