tests/spec/emit/snapshots/wrapped_return_temp_no_collision.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn foo() -> Option<int> {
    let tmp_1 = 7;
    let _ = tmp_1;
    return if true { Some(1) } else { None };
  }
  
  fn main() {
    let _ = foo();
  }
---
package main

func foo() (int, bool) {
	if true {
		return 1, true
	}
	return 0, false
}

func main() {
	foo()
}
