tests/spec/emit/snapshots/zero.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> int {
    0
  }
---
package main

func test() int {
	return 0
}
